k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chatwoot
  labels:
    name: chatwoot
    app: chatwoot
